# yashi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
shai/: cli.py  console.py  generate.py  prompt.py
yash_ai/: __main__.py  console.py  generate.py
